  * debian/patches/009-allow-parallel-build.patch: Fix Makefile.PL
    to allow parallel building. Fixes a misbuild with dpkg-buildpackage -j
    found by Daniel Schepler.

  [ Damyan Ivanov ]
  * add 010-svn-fix-perl5.10-build.patch. Closes: #462994
  * debian/rules:
    + replace debian/stamp-patched with $(QUILT_STAMPFN)
    + make install-stamp depend on build-stamp, not build

 -- Frank Lichtenheld <djpig@debian.org>  Tue, 30 Oct 2007 09:57:01 +0100

libapache2-mod-perl2 (2.0.3-2) unstable; urgency=low

  [ Damyan Ivanov ]
  * Upload to unstable
    + Closes: #401737 -- Please package latest libapache2-mod-perl2
      - Closes: #398675 -- Rejects configuration in a Perl configuration
                           section that works fine as a regular configuration
                           directive
      - Closes: #399639 -- Data pushed onto @PerlSections is ignored
    + Closes: #406742 -- clean rule does not clean properly
    + Closes: #357438 -- Apache2::Resource uses BSD::Resource

  [ Gunnar Wolf ]
  * Added netbase to build-dependencies, fixing FTBFS (Closes: #439281)

 -- Gunnar Wolf <gwolf@debian.org>  Wed, 29 Aug 2007 11:38:42 +0200

libapache2-mod-perl2 (2.0.3-1) experimental; urgency=low

  * New upstream release
    + refreshed patches
      001-gtop2.patch
      004-bugs-to-debian-bts.patch
      005-regex-DoS-bug-433549.patch
      006_man_section_and_build_warnings.patch - one hunk dropped
    + dropped patches applied upstream
      002-crash-404051.patch -- applied upstream
      003-segfault-local-ENV-bug-384622.patch -- applied upstream
      007_test_head_content_length_on_empty_content_2.2.patch -- upstream
      contains better fix
  * Add dh_slibdeps to arch-dep target
  * Wrapped (Build-)Depends lists
  * Add testing to the build process
    + Added apache2, libcompress-zlib-perl and libbsd-resource-perl to
      Build-Depends to allow tests to be run on buildds
    + Put LANG=C in front of '$(MAKE) test' to avoid locale side effects (in