@@ -124,45 +124,3 @@ binary-arch: build install
 
 .PHONY: binary
 binary: binary-indep binary-arch
-
-
-
-### #!/usr/bin/make -f
-### 
-### include /usr/share/cdbs/1/rules/debhelper.mk
-### include /usr/share/cdbs/1/rules/simple-patchsys.mk
-### include /usr/share/cdbs/1/class/perlmodule.mk
-### 
-### DEB_MAKE_CHECK_TARGET =
-### DEB_MAKE_BUILD_TARGET = all glue_pods
-### DEB_MAKE_INSTALL_TARGET = install_vendor PREFIX=debian/libapache2-mod-perl2/usr
-### 
-### DEB_MAKEMAKER_USER_FLAGS := MP_USE_GTOP=1 \
-### 		MP_TRACE=0 \
-### 		MP_USE_DSO=1 \
-### 		MP_USE_STATIC=0 \
-### 		MP_CCOPTS="-g -Wall" \
-### 		MP_INCLUDE_DIR=/usr/include/apache2 \
-### 		MP_APXS=/usr/bin/apxs2 \
-### 		MP_INCLUDE_DIR=/usr/include/apr-1.0
-### 
-### 		#deleted for new build
-### 		#MP_AP_PREFIX=/usr \
-### 
-### BUILDDIR = $(CURDIR)/debian/libapache2-mod-perl2
-### 
-### install/libapache2-mod-perl2::
-### 	install $(CURDIR)/src/modules/perl/mod_perl.so debian/libapache2-mod-perl2/usr/lib/apache2/modules/mod_perl.so
-### 	install -m644 $(CURDIR)/debian/perl.load debian/libapache2-mod-perl2/etc/apache2/mods-available
-### 	rm -rf $(BUILDDIR)/usr/man
-### 	rm -f $(BUILDDIR)/usr/share/man/man3/mod_perl.3pm
-### 	[ ! -d $(BUILDDIR)/usr/share/perl5 ] || rmdir --ignore-fail-on-non-empty --parents --verbose $(BUILDDIR)/usr/share/perl5
-### 
-### 	# mp2bug goes into the /usr/share/bug infrastructure!
-### 	mv $(BUILDDIR)/usr/bin/mp2bug $(BUILDDIR)/usr/share/libapache2-mod-perl2/
-### 	install -m755 $(CURDIR)/debian/libapache2-mod-perl2.bug $(BUILDDIR)/usr/share/bug/
-### 	mv $(BUILDDIR)/usr/share/bug/libapache2-mod-perl2.bug $(BUILDDIR)/usr/share/bug/libapache2-mod-perl2
-### 
-### install/libapache2-mod-perl2-dev::
-### 	install -m644 $(CURDIR)/xs/*.h debian/libapache2-mod-perl2-dev/usr/include/apache2
-### 	install -m644 $(CURDIR)/src/modules/perl/*.h debian/libapache2-mod-perl2-dev/usr/include/apache2
