@@ -17,6 +17,7 @@ libapache2-mod-perl2 (2.0.3-3) UNRELEASED; urgency=low
   * debian/rules:
     + replace debian/stamp-patched with $(QUILT_STAMPFN)
     + make install-stamp depend on build-stamp, not build
+    + remove commended-out cdbs make rules
 
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 30 Oct 2007 09:57:01 +0100
 
